Introduce Map.of